Devops-Notes/Kubernetes/Kubernets-Sample-Projects/Ingress-deployment/Tomcatpod.yml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod2
  labels:
    app: my-tomcat
spec:
  containers:
  - name: my-container
    image: ashokit/javawebapp
---
apiVersion: v1
kind: Service
metadata:
  name: tomcatappsvc
spec:
  selector:
    app: my-tomact
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
